<resources>
    <string name="app_name">Exlibris</string>

    <string name="toolbar_default_name">Mi Biblioteca</string>

    <string name="button_take_photo">Agregar portada</string>
    <string name="field_book_name">Titulo</string>
    <string name="field_author">Nombre y apellido del autor</string>
    <string name="field_publishing_house">Editorial</string>
    <string name="field_isbn">ISBN</string>
    <string name="checkbox_read">Leido</string>

    <!-- MainActivity -->
    <string name="name_mainActivity">MainActivity</string>
    <string name="mensaje_error_preferencias1">Error al obtener preferencias - LibraryOwne</string>
    <string name="mensaje_error_preferencias2">Error al obtener preferencias - shouldCustomizeName</string>
    <string name="mensaje_error_listaLibros">Error al obtener la lista de libros</string>


    <!-- Buttons -->
    <string name="button_save">Guardar</string>
    <string name="button_cancel">Cancelar</string>


    <!-- Preference -->
    <string name="preference_category_title">Personalizar nombre de la biblioteca</string>
    <string name="switch_preference_title">Personalizar</string>
    <string name="edit_text_preference_summary">Puede cambiar el nombre de la biblioteca</string>
    <string name="edit_text_preference_title">Ingresa tu nombre</string>

    <!-- About me -->
    <string name="text_about_me">Aplicacion donde puedes archivar los libros que posees con una imagen que los identifiquen sacados por vos mismo, esta aplicacion fue creada por Belen Medina Roldán y Cristian Alejandro Rojas</string>
    <string name="app_repository">Repository: https://github.com/belenmr/exlibris</string>

    <!--Login-->
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="password2">Ingrese Password De Nuevo</string>
    <string name="registrarse">Registrarse</string>
    <string name="login">Login</string>
    <string name="cancel">Cancelar</string>
    <string name="error_login">Error al iniciar, corrobore sus datos</string>
    <string name="error_login_usuario">Falta completar campo usuario</string>
    <string name="error_login_password">Falta completar campo password</string>
    <string name="error_login_password2">Falta completar campo password2</string>
    <string name="error_registro_usuario">Complete el campo usuario</string>
    <string name="error_registro_password1">Complete la contraseña, debe ser mayor a 4 caracteres</string>
    <string name="error_registro_password2">El reingreso de la contraseña no coincide</string>
    <string name="error_registro">Error al registrarse, vuelva a intentarlo</string>
    <string name="nameLogin">LoginActivity</string>
    <string name="error_preferencias">Error al obtener preferencias</string>

    <!-- Sample book -->
    <string name="sample_book_name">Los Juegos Del Hambre</string>
    <string name="sample_author">Suzanne Collins</string>
    <string name="sample_publishing_house">Scholastic Press</string>
    <string name="sample_isbn">9891231512131231587</string>
    <string name="checkbox_pendiente">Pendiente</string>

    <string name="push_notif_channel_id">2</string>

    <!--Navigation Drawer-->
    <string name="registrar">Registrar</string>
    <string name="novedades">Novedades</string>
    <string name="salir">Cerrar Sesion</string>
    <string name="open">Abierto</string>
    <string name="close">Cerrado</string>
    <string name="agregarLibro">Agregar Libro Nuevo</string>

    <!--AddBook-->
    <string name="nameAddBook">AddBookActivity</string>
    <string name="errorAddBookObtenerLibro">Error al obtener libro</string>
    <string name="mensajeAddBook">Debe ingresar datos validos</string>
    <string name="errorFillAddBook">Fill field</string>
    <string name="nuevoLibroAddBooK">Nuevo Libro Agregado</string>
    <string name="mensajeNuevoLibroAddBook">Ingrese y observe el catalogo actualizado</string>

    <!--BookActivity-->
    <string name="preguntaBookActivity">¿Desea elimnarlo?</string>
    <string name="cancelarBookActivity">CANCELAR</string>
    <string name="eliminarBookActivity">ELIMINAR</string>
    <string name="mensajeEliminar">Libro eliminado exitosamente</string>
</resources>