<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/it_login"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/login"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/it_registro"
        android:icon="@drawable/ic_baseline_how_to_reg_24"
        android:title="@string/registrar"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/it_novedades"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/novedades"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/it_deslog"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/salir"
        app:showAsAction="ifRoom" />

</menu>