<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_category_title">
        <SwitchPreference
            android:defaultValue="false"
            android:key="switchCustomizeNameLib"
            android:title="@string/switch_preference_title" />
        <EditTextPreference
            android:defaultValue="false"
            android:inputType="text"
            android:key="OwnerName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/edit_text_preference_summary"
            android:title="@string/edit_text_preference_title"
            app:dependency="switchCustomizeNameLib" />
    </PreferenceCategory>

</PreferenceScreen>